Personalizacion del layout

--- a/src/app/components/pages/client/client.component.sass
+++ b/src/app/components/pages/client/client.component.sass
@@ -1,1 +1,54 @@
+.logo
+  height: 60px
+  background-image: url("src/assets/img/jsmile2.png")
+  background-position: center
+  background-size: contain
+  background-repeat: no-repeat
+  margin: 5px
+
+
+.layout
+  min-height: 100vh
+
+
+nz-sider
+  overflow: auto
+  height: 100%
+  position: fixed
+  left: 0
+  background-color: #F7F7F7
+
+ul
+  background-color: #004D5F
+
+li
+  color: #ffffff
+
+
+li:hover
+  color: #ffffff
+  background-color: #3F99AE
+
+
+.right-layout
+  margin-left: 200px
+
+
+nz-header
+  background-color: #004D5F
+  padding: 0
+
+
+nz-content
+  margin: 24px 16px 0
+  overflow: initial
+
+.inner-content
+  padding: 24px
+  background: #fff
+  text-align: center
+
+
+nz-footer
+  text-align: center
 
