--- a/src/app/components/pages/client/client.component.html
+++ b/src/app/components/pages/client/client.component.html
@@ -1,19 +1,65 @@
-<nz-layout>
-  <nz-header>
-    <div class="logo"></div>
-    <ul nz-menu nzTheme="dark" nzMode="horizontal">
-      <li nz-menu-item>nav 1</li>
-      <li nz-menu-item>nav 2</li>
-      <li nz-menu-item>nav 3</li>
+<nz-layout class="layout">
+  <nz-sider>
+    <div class="logo" ></div>
+    <ul nz-menu nzMode="inline">
+      <li nz-menu-item>
+        <i nz-icon nzType="file"></i>
+        <span>nav 1</span>
+      </li>
+      <li nz-menu-item>
+        <i nz-icon nzType="video-camera"></i>
+        <span>nav 2</span>
+      </li>
+      <li nz-menu-item>
+        <i nz-icon nzType="upload"></i>
+        <span>nav 3</span>
+      </li>
+      <li nz-menu-item>
+        <i nz-icon nzType="bar-chart"></i>
+        <span>nav 4</span>
+      </li>
+      <li nz-menu-item>
+        <i nz-icon nzType="cloud-o"></i>
+        <span>nav 5</span>
+      </li>
+      <li nz-menu-item>
+        <i nz-icon nzType="appstore-o"></i>
+        <span>nav 6</span>
+      </li>
+      <li nz-menu-item>
+        <i nz-icon nzType="team"></i>
+        <span>nav 7</span>
+      </li>
+      <li nz-menu-item>
+        <i nz-icon nzType="shop"></i>
+        <span>nav 8</span>
+      </li>
     </ul>
-  </nz-header>
-  <nz-content>
-    <nz-breadcrumb>
-      <nz-breadcrumb-item>Home</nz-breadcrumb-item>
-      <nz-breadcrumb-item>List</nz-breadcrumb-item>
-      <nz-breadcrumb-item>App</nz-breadcrumb-item>
-    </nz-breadcrumb>
-    <div class="inner-content">Content</div>
-  </nz-content>
-  <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
+  </nz-sider>
+  <nz-layout class="right-layout">
+    <app-header></app-header>
+    <nz-content>
+      <div class="inner-content">
+        <aside>
+
+
+            <h1>Sitios relacionados</h1>
+
+            <ul>
+
+              <li><a href="http://science.nasa.gov/astrophysics/">Astrofísica - NASA Science</a></li>
+
+              <li><a href="http://www-astro.physics.ox.ac.uk/">Astrofísica | Universidad de Oxford</a></li>
+
+              <li><a href="http://aston.blogejemplo.com/">El blog de astrofísica de Aston</a></li>
+
+
+            </ul>
+
+
+        </aside>
+      </div>
+    </nz-content>
+    <app-footer></app-footer>
+  </nz-layout>
 </nz-layout>
