Creacion de componentes, personalizacion e inclusion de contenido

--- a/src/app/components/pages/client/client.component.sass
+++ b/src/app/components/pages/client/client.component.sass
@@ -24,10 +24,9 @@ ul
 li
   color: #ffffff
 
-
 li:hover
   color: #ffffff
-  background-color: #3F99AE
+  background-color: #003744
 
 
 .right-layout
@@ -51,4 +50,22 @@ nz-content
 
 nz-footer
   text-align: center
+
+.ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected
+  background-color: #003744
+
+.login
+
+  margin: 100px 30px 20px
+
+.login .ant-btn
+  background-color: #004D5F
+  color: #ffffff
+  border-radius: 5px
+
+.login .ant-btn:hover
+
+  background-color: #ffffff
+  color: #004D5F
+  border-color: #004D5F
 
