--- a/src/app/components/shared/layout/header/header.component.html
+++ b/src/app/components/shared/layout/header/header.component.html
@@ -1,4 +1,19 @@
 <nz-header>
-  <h1>Bienvenido</h1>
+  <div class="social" ></div>
+  <ul>
+    <li>
+      <h3 >Síguenos en  </h3>
+    </li>
+    <li>
+      <a href="http://www.facebook.com" target="_blank" > <i nz-icon nzType="facebook" nzTheme="fill"></i> Facebook</a>
+    </li>
+    <li>
+      <a href="http://www.twitter.com" target="_blank" ><i nz-icon nzType="twitter-square" nzTheme="fill"></i> Twitter</a>
+    </li>
+    <li>
+      <a href="http://www.instagram.com" target="_blank" ><i nz-icon nzType="instagram" nzTheme="fill"></i> Instagram</a>
+    </li>
+
+  </ul>
 
 </nz-header>
