--- a/src/app/components/shared/layout/header/header.component.sass
+++ b/src/app/components/shared/layout/header/header.component.sass
@@ -1,6 +1,19 @@
 nz-header
   background-color: #004D5F
-  height: 70px
+  height: 60px
+  background-size: contain
 
-h1
-  color: #cfd8dc
+h3
+  color: #ffffff
+  display: inline
+ul
+  text-align: right
+  padding: 0
+a
+  color: #ffffff
+a:hover
+  color: #08C1EC
+li
+  display: inline
+  padding-left: 4px
+  padding-right: 4px
