--- a/src/app/components/pages/client/client.component.html
+++ b/src/app/components/pages/client/client.component.html
@@ -2,64 +2,44 @@
   <nz-sider>
     <div class="logo" ></div>
     <ul nz-menu nzMode="inline">
-      <li nz-menu-item>
-        <i nz-icon nzType="file"></i>
-        <span>nav 1</span>
+      <li nz-menu-item [routerLink]="['/inicio']" routerLinkActive="active-link" >
+        <i nz-icon nzType="home" nzTheme="fill"></i>
+        <span >Inicio</span>
       </li>
-      <li nz-menu-item>
-        <i nz-icon nzType="video-camera"></i>
-        <span>nav 2</span>
+      <li nz-menu-item [routerLink]="['/hoteles']" routerLinkActive="active-link">
+        <i nz-icon nzType="star" nzTheme="fill"></i>
+        <span > Hoteles</span>
       </li>
-      <li nz-menu-item>
-        <i nz-icon nzType="upload"></i>
-        <span>nav 3</span>
+      <li nz-menu-item [routerLink]="['/sitios']" routerLinkActive="active-link">
+        <i nz-icon nzType="environment" nzTheme="fill"></i>
+        <span >Sitios de Interés</span>
       </li>
-      <li nz-menu-item>
-        <i nz-icon nzType="bar-chart"></i>
-        <span>nav 4</span>
-      </li>
-      <li nz-menu-item>
-        <i nz-icon nzType="cloud-o"></i>
-        <span>nav 5</span>
-      </li>
-      <li nz-menu-item>
-        <i nz-icon nzType="appstore-o"></i>
-        <span>nav 6</span>
-      </li>
-      <li nz-menu-item>
-        <i nz-icon nzType="team"></i>
-        <span>nav 7</span>
-      </li>
-      <li nz-menu-item>
-        <i nz-icon nzType="shop"></i>
-        <span>nav 8</span>
+      <li nz-menu-item [routerLink]="['/nosotros']" routerLinkActive="active-link">
+        <i nz-icon nzType="info-circle" nzTheme="fill"></i>
+        <span >Quienes Somos</span>
       </li>
     </ul>
+
+
+    <div class="login">
+        <button nz-button nzType="#004D5F" [nzSize]="20" nzShape="round"><i nz-icon nzType="user" nzTheme="outline"></i>Iniciar Sesión</button>
+        <br>
+        <br>
+        <br>
+        <button nz-button nzType="#004D5F" [nzSize]="20" nzShape="round"><i nz-icon nzType="user-add" nzTheme="outline"></i>Crear Cuenta</button>
+    </div>
+
   </nz-sider>
+
+
   <nz-layout class="right-layout">
     <app-header></app-header>
     <nz-content>
-      <div class="inner-content">
-        <aside>
-
-
-            <h1>Sitios relacionados</h1>
-
-            <ul>
-
-              <li><a href="http://science.nasa.gov/astrophysics/">Astrofísica - NASA Science</a></li>
-
-              <li><a href="http://www-astro.physics.ox.ac.uk/">Astrofísica | Universidad de Oxford</a></li>
-
-              <li><a href="http://aston.blogejemplo.com/">El blog de astrofísica de Aston</a></li>
-
-
-            </ul>
-
-
-        </aside>
+      <div class="inner-content" >
+        <router-outlet></router-outlet>
       </div>
     </nz-content>
     <app-footer></app-footer>
   </nz-layout>
+
 </nz-layout>
