--- a/src/app/components/pages/client/home/home.component.html
+++ b/src/app/components/pages/client/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div nz-row >
+  <div nz-col >
+    <div class="banner"><img src="assets/img/banner-inicio.jpg"></div>
+  </div>
+</div>
+
