Personalización de menús

--- a/src/app/components/pages/client/client.component.html
+++ b/src/app/components/pages/client/client.component.html
@@ -2,13 +2,13 @@
   <nz-sider>
     <div class="logo" ></div>
     <ul nz-menu nzMode="inline">
-      <li nz-menu-item [routerLink]="['/inicio']" routerLinkActive="active-link" >
+      <li nz-menu-item [routerLink]="['/']" routerLinkActive="active-link" >
         <i nz-icon nzType="home" nzTheme="fill"></i>
         <span >Inicio</span>
       </li>
       <li nz-menu-item [routerLink]="['/hoteles']" routerLinkActive="active-link">
         <i nz-icon nzType="star" nzTheme="fill"></i>
-        <span > Hoteles</span>
+        <span >Hoteles</span>
       </li>
       <li nz-menu-item [routerLink]="['/sitios']" routerLinkActive="active-link">
         <i nz-icon nzType="environment" nzTheme="fill"></i>
@@ -19,15 +19,6 @@
         <span >Quienes Somos</span>
       </li>
     </ul>
-
-
-    <div class="login">
-        <button nz-button nzType="#004D5F" [nzSize]="20" nzShape="round"><i nz-icon nzType="user" nzTheme="outline"></i>Iniciar Sesión</button>
-        <br>
-        <br>
-        <br>
-        <button nz-button nzType="#004D5F" [nzSize]="20" nzShape="round"><i nz-icon nzType="user-add" nzTheme="outline"></i>Crear Cuenta</button>
-    </div>
 
   </nz-sider>
 
