--- a/src/app/components/pages/client/home/home.component.sass
+++ b/src/app/components/pages/client/home/home.component.sass
@@ -1,8 +1,64 @@
-.banner
-  background-image: url("src/assets/img/banner-inicio.jpg")
+
+.layout
+  min-height: 50vh
+
+nz-sider
+  overflow: auto
+  height: 100%
+  position: fixed
+  left: 0
+  background-color: #F7F7F7
+  margin-top: 150px
+
+ul
+  background-color: #004D5F
+
+li
+  color: #ffffff
+
+li:hover
+  color: #ffffff
+  background-color: #003744
+
+.right-layout
+  margin-left: 200px
+
+.inner-content
+  padding: 24px
+  background: #ffffff
+  text-align: center
+
+.ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected
+  background-color: #003744
+
+.login
+  margin: 50px 20px 20px
+
+.login .ant-btn
+  background-color: #004D5F
+  color: #ffffff
+  border-radius: 5px
+
+.login .ant-btn:hover
+
+  background-color: #ffffff
+  color: #004D5F
+  border-color: #004D5F
+
+.titulo
+  background: #ffffff
+  padding: 10px
+
+nz-carousel
   background-position: center
-  background-repeat: no-repeat
-  width: auto
-  height: auto
+  height: 500px
+
+[nz-carousel-content]
+  text-align: center
+  height: 500px
+  line-height: 500px
+  color: #fff
+  overflow: hidden
+
 
 
