--- a/src/app/components/shared/layout/footer/footer.component.html
+++ b/src/app/components/shared/layout/footer/footer.component.html
@@ -1,1 +1,1 @@
-<nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
+<nz-footer >JTurismo | Tópicos Avanzados en Ingeniería © 2020 </nz-footer>
