--- a/src/app/components/shared/layout/header/header.component.sass
+++ b/src/app/components/shared/layout/header/header.component.sass
@@ -2,6 +2,13 @@ nz-header
   background-color: #004D5F
   height: 60px
   background-size: contain
+.logo
+  height: 60px
+  background-image: url("src/assets/img/jsmilefull.png")
+  background-size: contain
+  background-repeat: no-repeat
+  background-position: left
+  margin-top: 5px
 
 h3
   color: #ffffff
@@ -9,6 +16,8 @@ h3
 ul
   text-align: right
   padding: 0
+  height: 60px
+  background-size: contain
 a
   color: #ffffff
 a:hover
