--- a/src/app/components/shared/layout/header/header.component.html
+++ b/src/app/components/shared/layout/header/header.component.html
@@ -1,19 +1,24 @@
 <nz-header>
-  <div class="social" ></div>
-  <ul>
-    <li>
-      <h3 >Síguenos en  </h3>
-    </li>
-    <li>
-      <a href="http://www.facebook.com" target="_blank" > <i nz-icon nzType="facebook" nzTheme="fill"></i> Facebook</a>
-    </li>
-    <li>
-      <a href="http://www.twitter.com" target="_blank" ><i nz-icon nzType="twitter-square" nzTheme="fill"></i> Twitter</a>
-    </li>
-    <li>
-      <a href="http://www.instagram.com" target="_blank" ><i nz-icon nzType="instagram" nzTheme="fill"></i> Instagram</a>
-    </li>
+  <div nz-row>
+    <div nz-col nzSpan="8" class="logo"></div>
+    <div nz-col nzSpan="16" class="social">
 
-  </ul>
+      <ul>
+        <li>
+          <h3 >Síguenos en  </h3>
+        </li>
+        <li>
+          <a href="http://www.facebook.com" target="_blank" > <i nz-icon nzType="facebook" nzTheme="fill"></i> Facebook</a>
+        </li>
+        <li>
+          <a href="http://www.twitter.com" target="_blank" ><i nz-icon nzType="twitter-square" nzTheme="fill"></i> Twitter</a>
+        </li>
+        <li>
+          <a href="http://www.instagram.com" target="_blank" ><i nz-icon nzType="instagram" nzTheme="fill"></i> Instagram</a>
+        </li>
+      </ul>
+
+    </div>
+  </div>
 
 </nz-header>
