Creación del servicio y buscador

--- a/src/app/components/pages/client/nosotros/nosotros.component.html
+++ b/src/app/components/pages/client/nosotros/nosotros.component.html
@@ -1,6 +1,6 @@
-<h1>Conócenos</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed conubia condimentum in tempor habitasse tellus, aliquet lobortis erat mi tincidunt orci bibendum nunc parturient purus mattis vitae. Suscipit magnis malesuada enim pretium nibh felis volutpat faucibus fames hac facilisi, dictumst lacinia id et phasellus dui molestie fringilla imperdiet consequat duis, natoque sodales purus habitasse curae vel litora porttitor metus pharetra. At aptent nam massa pretium ullamcorper in augue neque proin, inceptos mattis ornare iaculis egestas mus nostra class, nascetur et odio mauris himenaeos vel ultricies dis.
+<nz-divider nzOrientation="center" nzText="Conócenos" style="font-size: 24px"></nz-divider>
 
-  Montes accumsan etiam venenatis porttitor viverra eu, morbi cras sed auctor torquent faucibus integer, dictumst parturient sociis suspendisse nibh. Eleifend neque vel velit posuere interdum facilisi aliquam orci mus lectus, felis fringilla vestibulum libero commodo nisi mauris cras. Elementum platea non vulputate dignissim dui nunc consequat iaculis imperdiet, faucibus risus ullamcorper vitae at purus rhoncus montes dictum sociosqu, nibh lacinia nascetur accumsan lectus justo per volutpat.
-
-  Ligula ad metus semper nam lectus himenaeos ridiculus quisque sapien, senectus magnis euismod interdum montes nibh dapibus purus ultricies, eleifend tristique libero faucibus placerat conubia natoque habitasse. Sem fames aliquam himenaeos per praesent rhoncus orci cras, dignissim curae nostra tempor cum tempus ac, mi tortor a phasellus pulvinar at magna. Montes purus accumsan diam consequat tempor mauris semper, primis mollis feugiat donec vivamus sociis vehicula tincidunt, nunc varius suspendisse arcu augue nisi.</p>
+<div nz-row >
+  <img alt="100px" src="assets/img/jbanner.jpg">
+</div>
+<h3 style="margin-top: 20px">JTurismo es la empresa de viajes online líder en Colombia. Con 20 años en el mercado, acompañando a los Colombianos desde el momento en que sueñan con viajar hasta cuando están compartiendo recuerdos. Gracias a la fuerte apuesta por desarrollo tecnológico JTurismo ofrece una experiencia personalizada para más de 18 millones de clientes. </h3>
