--- a/src/app/components/pages/client/hoteles/hoteles.component.html
+++ b/src/app/components/pages/client/hoteles/hoteles.component.html
@@ -1,14 +1,30 @@
 <nz-divider nzOrientation="center" nzText="Hoteles Disponibles" style="font-size: 24px"></nz-divider>
 
+<div class="row">
+  <div class="col">
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Buscar" [(ngModel)]="prueba">
+    </div>
+  </div>
+</div>
+
+
 <div nz-row [nzGutter]="16">
-  <div nz-col class="gutter-row" [nzSpan]="12" *ngFor="let item of productos | paginate: { itemsPerPage: 8, currentPage: pAct }"><div class="inner-box"></div>
+
+  <div nz-col class="gutter-row" [nzSpan]="12" *ngFor="let item of productos | filter:prueba | paginate: { itemsPerPage: 8, currentPage: pAct }"><div class="inner-box"></div>
 
     <nz-card nzHoverable style="height: 370px"  [nzCover]="coverTemplate">
-      <nz-card-meta nzTitle="{{item.ubicacion}} | Desde {{item.precio}}" nzDescription="{{item.descripcion}}"></nz-card-meta>
+
+      <nz-card-meta nzTitle="{{item.ubicacion | lowercase}} * Desde {{item.precio}}" nzDescription="{{item.descripcion}}"></nz-card-meta>
+
     </nz-card>
+
     <ng-template #coverTemplate>
+
       <img src="{{item.imagen}}"/>
+
     </ng-template>
+
   </div>
 
 </div>
