--- a/src/app/components/pages/client/hoteles/hoteles.component.html
+++ b/src/app/components/pages/client/hoteles/hoteles.component.html
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col">
     <div class="form-group">
-      <input type="text" class="form-control" placeholder="Buscar" [(ngModel)]="prueba">
+      <input type="text" class="form-control" placeholder="Busca por ubicación" [(ngModel)]="prueba">
     </div>
   </div>
 </div>
