--- a/src/app/components/pages/client/hoteles/hoteles.component.sass
+++ b/src/app/components/pages/client/hoteles/hoteles.component.sass
@@ -1,6 +1,13 @@
 .gutter-row
   padding: 8px 0
 
+input
+  height: 40px
+  width: 400px
+  border-radius: 5px
+  margin: 10px
+  text-align: center
+  border-color: #004D5F
 
 
 
